--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,238 @@
-body{
-    background-color:blueviolet
-}
+@media only screen and (max-width: 2000px ){
+    body{
+        background-color: #B8173E
+        
+    }
+    #title{
+        display: inline-flex;
+        text-align: center;
+        font-family: 'Baloo Chettan', cursive;
+        font-size: 30px;
+    }
+    #register{
+        display: flex;
+        flex-direction: column;
+        
+        padding: 1px;
+        align-items: center;
+        justify-content: center;
+        
+    }
+    #display{
+        text-align: center;
+        display: inline-flex;
+        font-family: 'Press Start 2P', cursive;
+        font-size: 50px;
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    
+    }
+    #row1{
+        display: flex;
+        text-align: center;
+        flex-grow: 1;
+    }
+    #row2{
+        display: flex;
+        text-align: center;
+    }
+    #row3{
+        display: flex;
+        text-align: center;
+    }
+    #row4{
+        display: flex;
+        text-align: center;
+        
+    }
+    #row5{
+        display: flex
+        
+        
+    }
+    #moneysign{
+        display: inline-flex;
+        text-align: center;
+        font-family: 'Baloo Chettan', cursive;
+        font-size: 40px;
+    }
+    .button{
+        border-radius: 20%;
+        height: 130px;
+        width: 130px;
+        font-family: 'Baloo Chettan', cursive;
+        font-size: 20px;
+        padding: 5px;
+        background-color: white;
+      color: black;
+      border: 2px solid black;
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    
+    }
+    .button:hover {
+        background-color: #B8173E;
+        color: white;
+    }
+    #titleBox{
+        background-color: white;
+        text-align: center;
+        border-radius: 20%;
+    }
+    }
+    
+    @media only screen and (max-width: 1200px){
+        body{
+            background-color: #B8173E
+            
+        }
+        #title{
+            display: inline-flex;
+            text-align: center;
+            font-family: 'Baloo Chettan', cursive;
+            font-size: 25px;
+        }
+        #register{
+            display: flex;
+            flex-direction: column;
+            
+            padding: 1px;
+            align-items: center;
+            justify-content: center;
+            
+        }
+        #display{
+            text-align: center;
+            display: inline-flex;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 35px;
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        
+        }
+        #row1{
+            display: flex;
+            text-align: center;
+            flex-grow: 1;
+        }
+        #row2{
+            display: flex;
+            text-align: center;
+        }
+        #row3{
+            display: flex;
+            text-align: center;
+        }
+        #row4{
+            display: flex;
+            text-align: center;
+            
+        }
+        #row5{
+            display: flex
+            
+            
+        }
+        #moneysign{
+            display: inline-flex;
+            text-align: center;
+            font-family: 'Baloo Chettan', cursive;
+            font-size: 30px;
+        }
+        .button{
+            border-radius: 20%;
+            height: 110px;
+            width: 110px;
+            font-family: 'Baloo Chettan', cursive;
+            font-size: 20px;
+            padding: 5px;
+            
+        }
+        .button:hover {
+            background-color: #B8173E;
+            color: white;
+        }
+        #titleBox{
+            background-color: white;
+            text-align: center;
+            border-radius: 20%;
+        }
+    }
+    
+    @media only screen and (max-width: 800px){
+        body{
+            background-color: #B8173E
+            
+        }
+        #title{
+            display: inline-flex;
+            text-align: center;
+            font-family: 'Baloo Chettan', cursive;
+            font-size: 15px;
+        }
+        #register{
+            display: flex;
+            flex-direction: column;
+            
+            padding: 1px;
+            align-items: center;
+            justify-content: center;
+            
+        }
+        #display{
+            text-align: center;
+            display: inline-flex;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 20px;
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        
+        }
+        #row1{
+            display: flex;
+            text-align: center;
+            flex-grow: 1;
+        }
+        #row2{
+            display: flex;
+            text-align: center;
+        }
+        #row3{
+            display: flex;
+            text-align: center;
+        }
+        #row4{
+            display: flex;
+            text-align: center;
+            
+        }
+        #row5{
+            display: flex
+            
+            
+        }
+        #moneysign{
+            display: inline-flex;
+            text-align: center;
+            font-family: 'Baloo Chettan', cursive;
+            font-size: 20px;
+        }
+        .button{
+            border-radius: 20%;
+            height: 80px;
+            width: 80px;
+            font-family: 'Baloo Chettan', cursive;
+            font-size: 15px;
+            padding: 5px;
+            
+        }
+        .button:hover {
+            background-color: #B8173E;
+            color: white;
+        }
+        #titleBox{
+            background-color: white;
+            text-align: center;
+            border-radius: 20%;
+        }
+        .food{
+            width: 120px;
+            height: 120px;
+        }
+    }
