--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@
         }
     }
     
-    @media only screen and (max-width: 600px){
+    @media only screen and (max-width: 700px){
         body{
             background-color: #B8173E
             
@@ -234,5 +234,86 @@
         .food{
             width: 120px;
             height: 120px;
+        }
+    }
+
+    @media only screen and (max-width: 200px){
+        body{
+            background-color: #B8173E
+            
+        }
+        #title{
+            display: inline-flex;
+            text-align: center;
+            font-family: 'Baloo Chettan', cursive;
+            font-size: 15px;
+        }
+        #register{
+            display: flex;
+            flex-direction: column;
+            
+            padding: 1px;
+            align-items: center;
+            justify-content: center;
+            
+        }
+        #display{
+            text-align: center;
+            display: inline-flex;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 15px;
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        
+        }
+        #row1{
+            display: flex;
+            text-align: center;
+            flex-grow: 1;
+        }
+        #row2{
+            display: flex;
+            text-align: center;
+        }
+        #row3{
+            display: flex;
+            text-align: center;
+        }
+        #row4{
+            display: flex;
+            text-align: center;
+            
+        }
+        #row5{
+            display: flex
+            
+            
+        }
+        #moneysign{
+            display: inline-flex;
+            text-align: center;
+            font-family: 'Baloo Chettan', cursive;
+            font-size: 20px;
+        }
+        .button{
+            border-radius: 20%;
+            height: 60px;
+            width: 60px;
+            font-family: 'Baloo Chettan', cursive;
+            font-size: 10px;
+            padding: 5px;
+            
+        }
+        .button:hover {
+            background-color: #B8173E;
+            color: white;
+        }
+        #titleBox{
+            background-color: white;
+            text-align: center;
+            border-radius: 20%;
+        }
+        .food{
+            width: 100px;
+            height: 100px;
         }
     }
