--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,9 @@
             
         }
         #row5{
-            display: flex
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
             
             
         }
