--- a/css/styles.css
+++ b/css/styles.css
@@ -203,8 +203,9 @@
             
         }
         #row5{
-            display: flex
-            
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
             
         }
         #moneysign{
@@ -232,8 +233,8 @@
             border-radius: 20%;
         }
         .food{
-            width: 120px;
-            height: 120px;
+            width: 50px;
+            height: 50px;
         }
     }
 
